--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy WINGMAN Documentation
+name: Deploy WINGMAN Documentation to GitHub Pages
 
 on:
   push:
@@ -62,42 +62,5 @@ jobs:
             .git
             .gitignore
             .nojekyll
-            CNAME
           commit-message: ${{ env.COMMIT_MSG }}
           force: true
-          
-  deploy-to-peakdefence:
-    name: Deploy to docs.peakdefence.com
-    needs: deploy
-    if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/master'
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
-          
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.x'
-          
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-          
-      - name: Build documentation
-        run: mkdocs build --strict --verbose --site-dir ./site
-        
-      - name: Deploy to docs.peakdefence.com
-        if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/master'
-        uses: appleboy/scp-action@master
-        with:
-          host: ${{ secrets.SSH_HOST }}
-          username: ${{ secrets.SSH_USERNAME }}
-          key: ${{ secrets.SSH_PRIVATE_KEY }}
-          source: "site/*"
-          target: ${{ secrets.DEPLOY_PATH || '/var/www/docs.peakdefence.com' }}
-          strip_components: 1
-          rm: true
