--- a/requirements.txt
+++ b/requirements.txt
@@ -10,5 +10,6 @@ mkdocs-git-authors-plugin>=0.6.0
 mkdocs-git-revision-date-plugin>=0.3.2,<1.0.0
 mkdocs-awesome-pages-plugin>=2.8.0
 mkdocs-mermaid2-plugin>=1.0.6
+mkdocs-glossary>=1.1.0
 pyyaml>=6.0.1
 python-dotenv>=1.0.0
