redeploy with branch permission update

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,24 +11,31 @@ on:
 env:
   DEPLOY_BRANCH: gh-pages
   COMMIT_MSG: "Deployed ${{ github.sha }}"
+  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+# Set the permissions for the GITHUB_TOKEN
+permissions:
+  contents: write
+  pages: write
+  id-token: write
+
+concurrency:
+  group: "pages"
+  cancel-in-progress: true
 
 jobs:
-  deploy:
-    name: Deploy to GitHub Pages
+  build:
+    name: Build and Deploy
     runs-on: ubuntu-latest
-    
-    # Only run on pushes to main/master or on workflow_dispatch
-    if: github.event_name == 'workflow_dispatch' || (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/master')
-    
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          # If you're using a personal access token for deployment
-          token: ${{ secrets.GH_TOKEN || github.token }}
-          # This is necessary for the GitHub Pages action to work properly
-          persist-credentials: false
+          token: ${{ secrets.GITHUB_TOKEN }}
       
       - name: Set up Python
         uses: actions/setup-python@v4
@@ -52,15 +59,5 @@ jobs:
           path: ./site
           
       - name: Deploy to GitHub Pages
-        if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/master'
-        uses: JamesIves/github-pages-deploy-action@v4.6.0
-        with:
-          branch: ${{ env.DEPLOY_BRANCH }}
-          folder: site
-          clean: true
-          clean-exclude: |
-            .git
-            .gitignore
-            .nojekyll
-          commit-message: ${{ env.COMMIT_MSG }}
-          force: true
+        id: deployment
+        uses: actions/deploy-pages@v3
