--- a/.github/workflows/sync-to-gitlab.yml
+++ b/.github/workflows/sync-to-gitlab.yml
@@ -1,2 +1,15 @@
-- name: Sync to GitLab
-  uses: kujov/gitlab-sync@2.1.0
+name: "Sync GitHub to GitLab Action"
+on:
+  push:
+
+jobs:
+  test: # make sure the action works on a clean machine without building
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+      - uses: ./
+        with:
+          ssh_private_key: ${{ secrets.SSH_PRIVATE_KEY }}
+          target_repo_url: git@github.com:ZetabotCo/github-repository-sync-action-test.git
