--- a/.github/workflows/sync-to-gitlab.yml
+++ b/.github/workflows/sync-to-gitlab.yml
@@ -1,15 +1,20 @@
-name: "Sync GitHub to GitLab Action"
+name: Sync
+
 on:
   push:
+    branches:
+      - "**"
 
 jobs:
-  test: # make sure the action works on a clean machine without building
+  sync:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
         with:
           fetch-depth: 0
-      - uses: ./
+
+      - uses: offensive-vk/auto-repo-sync@v8
         with:
-          ssh_private_key: ${{ secrets.SSH_PRIVATE_KEY }}
-          target_repo_url: git@github.com:ZetabotCo/github-repository-sync-action-test.git
+          target-url: git@gitlab.com:peakdefence/wingman/docs.git
+          target-username: ${{ secrets.TARGET_USERNAME }}
+          target-token: ${{ secrets.TARGET_TOKEN }}
