--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ mkdocs-minify-plugin>=0.7.0
 mkdocs-redirects>=1.2.0
 mkdocs-git-committers-plugin-2>=1.2.0
 mkdocs-git-authors-plugin>=0.6.0
-mkdocs-git-revision-date-plugin>=0.3.2,<1.0.0
+mkdocs-git-revision-date-plugin>=1.1.0
 mkdocs-awesome-pages-plugin>=2.8.0
 mkdocs-mermaid2-plugin>=1.0.6
 mkdocs-glossary>=0.1.5
