--- a/.github/workflows/sync-to-gitlab.yml
+++ b/.github/workflows/sync-to-gitlab.yml
@@ -15,7 +15,7 @@ jobs:
       # https://github.com/offensive-vk/auto-repo-sync
       - uses: offensive-vk/auto-repo-sync@v8
         with:
-          target-url: git@gitlab.com:peakdefence/wingman/docs.git
+          target-url: https://gitlab.com/peakdefence/wingman/docs.git
           # This access tokens from GitLab
           target-username: ${{ secrets.TARGET_USERNAME }}
           target-token: ${{ secrets.TARGET_TOKEN }}
