--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -113,8 +113,10 @@ nav:
   - Getting Started:
     - Welcome: getting-started/welcome.md
     - 1st step (Context creation): getting-started/1st-step.md
+    - 2nd step (Documentation): getting-started/2nd-step.md
     - Quick Start Guide: getting-started/quick-start.md
     - WINGMAN Technology Overview: getting-started/overview.md
+    - Documentation reference: getting-started/master-list-of-documents.md
   - Core Concepts:
     - Core concepts: core-concepts/core-concepts-wingman.md
     - Graph Database Model: core-concepts/graph-database.md
